--- a/app/views/events/title_page.html.erb
+++ b/app/views/events/title_page.html.erb
@@ -10,35 +10,23 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <%= image_tag 'slides/slide1.jpg'%>
-      <div class="carousel-caption">
-        <h3>Chania</h3>
-        <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
-      </div>
+      <%= image_tag 'caro1.jpg'%>
+      
     </div>
 
     <div class="item">
-      <%= image_tag 'slides/slide2.jpg'%>
-      <div class="carousel-caption">
-        <h3>Chania</h3>
-        <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
-      </div>
+      <%= image_tag 'caro2.jpg'%>
+     
     </div>
 
     <div class="item">
-      <%= image_tag 'slides/slide3.jpg'%>
-      <div class="carousel-caption">
-        <h3>Flowers</h3>
-        <p>Beatiful flowers in Kolymbari, Crete.</p>
-      </div>
+      <%= image_tag 'caro3.jpg'%>
+      
     </div>
 
     <div class="item">
-      <%= image_tag 'slides/slide4.jpg'%>
-      <div class="carousel-caption">
-        <h3>Flowers</h3>
-        <p>Beatiful flowers in Kolymbari, Crete.</p>
-      </div>
+      <%= image_tag 'caro4.jpg'%>
+      
     </div>
   </div>
 </div>
@@ -46,50 +34,60 @@
 
 <div class="title container col-xs-12 col-sm-12 col-md-10 col-lg-9">
 	<div class="title-text-header col-xs-12 col-sm-12 col-md-12 col-lg-12">
-		<span class="title-head"> НАША ДIЯЛЬНIСТЬ </span>
+		<span class="title-head"> НАША ДІЯЛЬНIСТЬ </span>
 	</div>
 	<div class="title-text-items  col-xs-12 col-sm-12 col-md-12 col-lg-12">
+		<div class="flexrow">
 		<div class="title-text-left text-column  col-xs-12 col-sm-4 col-md-4 col-lg-4">
 			<%= image_tag 'galstuk.png'%>
 			<span class="title-caption"> ПIДВИЩЕННЯ РIВНЯ ПРАВОВИХ ЗНАНЬ НАСЕЛЕННЯ </span>
+			<div class="clearfix"> </div>
 			<p>
-				Любя, съешь щипцы, — вздохнёт мэр, — кайф жгуч. Шеф взъярён тчк щипцы с эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц в шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен шляп (юфть) — вдрызг! 
+				Члени КРМЮ проводять різноманітні правові заходи, метою яких є підвищення рівня знань у сфері права. Ми допомагаємо студентам, школярам та іншим зрозуміти Закони України та роз’яснити як застосовувати дані закони у повсякденному житті. Який сенс навіть від самих демократичних законів, якщо населення не буде розуміти їх та не зможе застосовувати у власному житті. Особливу увагу ми приділяємо розумінню та вивченню Конституції України школярами, адже Основний Закон повинна знати і розуміти кожна людина. 
 			</p>
 		</div>
 		<div class="title-text-center text-column  col-xs-12 col-sm-4 col-md-4 col-lg-4">
 			<%= image_tag 'jews.png'%>
-			<span class="title-caption"> ПОШУК НОВИХ ФОРМ ПРАВООСВШТНЬОЇ ТА ПРАВОВИХОВНО ДIЯЛЬНОСТI </span>
+			<span class="title-caption"> ПОШУК НОВИХ ФОРМ ПРАВООСВІТНЬОЇ ТА ПРАВОВИХОВНОЇ ДIЯЛЬНОСТІ </span>
+			<div class="clearfix"> </div>
 			<p>
-				Любя, съешь щипцы, — вздохнёт мэр, — кайф жгуч. Шеф взъярён тчк щипцы с эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц в шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен шляп (юфть) — вдрызг! 
+				Члени КРМЮ завжди створюють нові форми проведення різноманітних правових заходів. За останні роки ми пристосувались до усіх ланок населення і можемо знайти підхід як до учня 3-ого класу так і до особи пенсійного віку.  Сьогодні ми проводимо лекції, форуми, семінари, правові ігри, брейн-ринги, вебінари, бесіди тощо. Кожного дня ми прагнемо змінювати свої методики правового виховання для того, щоб підвищити рівень ефективності нашої діяльності. 
 			</p>
 		</div>
 		<div class="title-text-right text-column  col-xs-12 col-sm-4 col-md-4 col-lg-4">
 			<%= image_tag 'trophy.png'%>
-			<span class="title-caption"> ПIДВИЩЕННЯ РIВНЯ ТА ЯКОСТI ТЕОРЕТИЧНОЇ I ПРАКТИЧНОЇ  ПIДГОТОВКИ СТУДЕНТIВ-ПРАВНИКIВ ТА МОЛОДИХ ЮРИСТIВ </span>
+			<span class="title-caption"> ПІДВИЩЕННЯ РІВНЯ ТА ЯКОСТІ ТЕОРЕТИЧНОЇ І ПРАКТИЧНОЇ ПIДГОТОВКИ СТУДЕНТIВ-ПРАВНИКІВ ТА МОЛОДИХ ЮРИСТІВ </span>
+			<div class="clearfix"> </div>
 			<p>
-				Любя, съешь щипцы, — вздохнёт мэр, — кайф жгуч. Шеф взъярён тчк щипцы с эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц в шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен шляп (юфть) — вдрызг! 
+				У своїй діяльності ми не забуваємо і про власних учасників організації і тому постійно проводимо різноманітні заходи, метою яких є розвиток професійних навичок кожного члена КРМЮ, як майбутнього юриста. Такими заходами як правило є юридичні форуми на «гостру» тематику, майстер-класи від провідних юристів та науковців, спілкування зі ЗМІ тощо. 
 			</p>
 		</div>
+		</div>
+		<div class="flexrow">
 		<div class="title-text-left text-column  col-xs-12 col-sm-4 col-md-4 col-lg-4">
 			<%= image_tag 'galstuk.png'%>
 			<span class="title-caption"> ПОБУДОВА ПРАВОВОЇ ДЕРЖАВИ </span>
+			<div class="clearfix"> </div>
 			<p>
-				Любя, съешь щипцы, — вздохнёт мэр, — кайф жгуч. Шеф взъярён тчк щипцы с эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц в шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен шляп (юфть) — вдрызг! 
+				У статті 1 Основного Закону України зазначено, що наша держава є суверенною, незалежною, демократичною, соціальною та правовою. Правова держава - це форма організації державної влади, за якої верховенство в усіх сферах життя належить праву. У правовій державі всі — і державні органи, ігромадяни — однаковою мірою відповідальні і рівні перед законом. Тому наша діяльність спрямована на усвідомлення громадянами України основних правових принципів, які закріплені у чинному законодавстві України.
 			</p>
 		</div>
 		<div class="title-text-left text-column  col-xs-12 col-sm-4 col-md-4 col-lg-4">
 			<%= image_tag 'galstuk.png'%>
-			<span class="title-caption"> ПОШИРЕННЯ ЗАГАЛЬНОПРАВОВИХ IДЕЙ </span>
+			<span class="title-caption"> ПОШИРЕННЯ ЗАГАЛЬНОПРАВОВИХ ІДЕЙ </span>
+			<div class="clearfix"> </div>
 			<p>
-				Любя, съешь щипцы, — вздохнёт мэр, — кайф жгуч. Шеф взъярён тчк щипцы с эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц в шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен шляп (юфть) — вдрызг! 
+				У основі будь-якої усвідомленої діяльності людини лежать певні принципи. Смислове значення слова “принцип” означає – «керівний початок» або «основоположна ідея». Законодавство, будучи соціальним явищем, що створюється людьми з метою юридичного закріплення нормативно-правових розпоряджень, направлених на врегулювання суспільних відносин, також засноване на певних принципах. У своїй діяльності КРМЮ поширює серед різноманітних верств населення загальноправові ідеї, адже не розуміючи і не знаючи основоположні принципи людина не зрозуміє сенс закону.
 			</p>
 		</div>
 		<div class="title-text-left text-column  col-xs-12 col-sm-4 col-md-4 col-lg-4">
 			<%= image_tag 'galstuk.png'%>
-			<span class="title-caption"> РОЗВИТОК ПРАВОВОЇ СВIДОМОСТI I КУЛЬТУРИ НАСЕЛЕННЯ </span>
+			<span class="title-caption"> РОЗВИТОК ПРАВОВОЇ СВIДОМОСТІ І КУЛЬТУРИ НАСЕЛЕННЯ </span>
+			<div class="clearfix"> </div>
 			<p>
-				Любя, съешь щипцы, — вздохнёт мэр, — кайф жгуч. Шеф взъярён тчк щипцы с эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц в шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен шляп (юфть) — вдрызг! 
+				Правосвідомість — це форма суспільної свідомості, сукуп­ність правових поглядів, почуттів, емоцій, ідей, теорій та уявлень, які відображають ставлення окремої людини, соціальних груп і суспільства в цілому до чинного чи бажаного права та діяльності, пов'язаної з ним. На процес формування правосвідомості впливає багато факто­рів, серед яких матеріальні умови життя, соціальне становище, духов­на, у тому числі й правова, культура суспільства, стан правового вихо­вання населення, інтелектуальні можливості людини тощо. Наша діяльність спраямована на розвиток правової свідомості та правової культури населення, адже це є запорука успіху демократичного та свідомого суспільства. 
 			</p>
+		</div>
 		</div>
 	</div>
 </div>
@@ -118,8 +116,8 @@
 	<a href="https://minjust.gov.ua/ua">
 		<%= image_tag 'partners/ukr-minjust.png'%>
 	</a>
-	<a href="http://google.com">
-		<%= image_tag 'partners/vivid.png'%>
+	<a href="http://www.krmj.org.ua/">
+		<%= image_tag 'partners/third.png'%>
 	</a>
 </div>
 
@@ -144,7 +142,7 @@
 		</div>
 		<div class="team-member col-xs-12 col-sm-6 col-md-3 col-lg-3">
 			<%= image_tag 'team/team2.jpg'%>
-			<span class="team-member-name"> ГРИЦАЙ ВIКТОРIЯ </span>
+			<span class="team-member-name"> ГРИЦАЙ ВIКТОРІЯ </span>
 			<span class="info"> Секретар КРМЮ. Студентка Інституту підготовки кадрів для органів юстиції України 
                      НЮУ ім. Ярослава Мудрого. </span>
 		</div>
@@ -153,5 +151,4 @@
 
 	
 </div>
-<div class="anchor col-xs-1 col-sm-1 col-md-1 col-lg-1"><a  id="move_up" href="#anchor"><%= image_tag 'arrow.png'%></a></div>
-
+<div class=" anchor col-xs-1 col-sm-1 col-md-1 col-lg-1"><a  id="move_up" href="#anchor"><%= image_tag 'arrow.png'%></a></div>
