--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -14,7 +14,7 @@
       <ul class="nav navbar-nav">
         <li><a href="<%= root_path %>">ГОЛОВНА</a></li>
         <li><a href="<%= about_path %>">ПРО НАС</a></li>
-        <li><a href="<%= team_path %>">НАША КОМАДА</a></li>
+        <li><a href="<%= team_path %>">НАША КОМАНДА</a></li>
         <li><a href="<%= events_path %>">ПРОВЕДЕНI ЗАХОДИ</a></li>
         <li><a href="<%= contacts_path %>">КОНТАКТИ</a></li>
         <li><%= link_to "ЯК СТАТИ ЧЛЕНОМ КРМЮ?", contact_path, "data-no-turbolink" => true%></li>
