--- a/app/assets/stylesheets/title_page.scss
+++ b/app/assets/stylesheets/title_page.scss
@@ -52,11 +52,21 @@ div.item{
 }
 
 .flexrow{
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
+ }
 }
 
 .text-column{
-  flex: 1;
+  -webkit-box-flex: 1; 
+  -moz-box-flex: 1;        
+  width: 20%;              
+  -webkit-flex: 1;          
+  -ms-flex: 1;              
+  flex: 1;                 
   background-color: #61CCC7;
   text-align: center;
   float: left;
