--- a/app/views/events/title_page.html.erb
+++ b/app/views/events/title_page.html.erb
@@ -142,7 +142,7 @@
 		</div>
 		<div class="team-member col-xs-12 col-sm-6 col-md-3 col-lg-3">
 			<%= image_tag 'team/team2.jpg'%>
-			<span class="team-member-name"> ГРИЦАЙ ВIКТОРІЯ </span>
+			<span class="team-member-name"> ГРИЦАЙ ВІКТОРІЯ </span>
 			<span class="info"> Секретар КРМЮ. Студентка Інституту підготовки кадрів для органів юстиції України 
                      НЮУ ім. Ярослава Мудрого. </span>
 		</div>
