--- a/app/views/events/team.html.erb
+++ b/app/views/events/team.html.erb
@@ -19,7 +19,7 @@
 	<div class="our-team col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
 		<div class="team-name col-xs-12 col-sm-12 col-md-12 col-lg-12">Перестюк Олександр</div>
 		<div class="team-face col-xs-5 col-sm-3 col-md-3 col-lg-3">
-			<%= image_tag 'team/team2.jpg'%>
+			<%= image_tag 'team/team3.jpg'%>
 		</div>
 		<div class="team-text col-xs-7 col-sm-9 col-md-9 col-lg-9">
 			<p> Перший заступник Голови КРМЮ. Студент Інституту підготовки кадрів для органів юстиції 
@@ -32,7 +32,7 @@
 	<div class="our-team col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
 		<div class="team-name col-xs-12 col-sm-12 col-md-12 col-lg-12">Пономаренко Євген</div>
 		<div class="team-face col-xs-5 col-sm-3 col-md-3 col-lg-3">
-			<%= image_tag 'team/team2.jpg'%>
+			<%= image_tag 'team/team4.jpg'%>
 		</div>
 		<div class="team-text col-xs-7 col-sm-9 col-md-9 col-lg-9">
 			<p> Другий заступник Голови КРМЮ. Студент Інституту підготовки кадрів для органів    
@@ -45,7 +45,7 @@
 	<div class="our-team col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
 		<div class="team-name col-xs-12 col-sm-12 col-md-12 col-lg-12">Грицай Вікторія</div>
 		<div class="team-face col-xs-5 col-sm-3 col-md-3 col-lg-3">
-			<%= image_tag 'team/team2.jpg'%>
+			<%= image_tag 'team/team5.jpg'%>
 		</div>
 		<div class="team-text col-xs-7 col-sm-9 col-md-9 col-lg-9">
 			<p>  Секретар КРМЮ. Студентка Інституту підготовки кадрів для органів юстиції України 
@@ -78,10 +78,10 @@
 			
 		</div>
 		<div class="other-team-foto col-xs-12 col-sm-6 col-md-7 col-lg-7">
-			<%= image_tag 'team/team2.jpg'%>
-			<%= image_tag 'team/team2.jpg'%>
-			<%= image_tag 'team/team2.jpg'%>
-			<%= image_tag 'team/team2.jpg'%>
+			<%= image_tag 'team/1.jpg'%>
+			<%= image_tag 'team/2.jpg'%>
+			<%= image_tag 'team/3.jpg'%>
+			<%= image_tag 'team/4.jpg'%>
 			
 		</div>
 	</div>
