--- a/app/views/events/title_page.html.erb
+++ b/app/views/events/title_page.html.erb
@@ -97,7 +97,7 @@
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 painted">
 <div class="title-about-us container col-xs-12 col-sm-12 col-md-10 col-lg-9">
 	<span> ХТО МИ ТАКI </span>
-	<div class="about-us-carousel col-xs-12 col-sm-5 col-md-4 col-lg-4">
+	<div class="about-us-carousel no-padding col-xs-12 col-sm-5 col-md-4 col-lg-4">
 		<%= render 'carousel_team'%>
 	</div>
 	<div class="about-us-text col-xs-12 col-sm-7 col-md-8 col-lg-8">
@@ -130,18 +130,18 @@
                    ім. Ярослава Мудрого. </span>
 		</div>
 		<div class="team-member col-xs-12 col-sm-6 col-md-3 col-lg-3">
-			<%= image_tag 'team/team2.jpg'%>
+			<%= image_tag 'team/team3.jpg'%>
 			<span class="team-member-name"> ПЕРЕСТЮК ОЛЕКСАНДР </span>
 			<span class="info"> Перший заступник Голови КРМЮ. Студент Інституту підготовки кадрів для органів юстиції України НЮУ ім. Ярослава Мудрого. </span>
 		</div>
 		<div class="team-member col-xs-12 col-sm-6 col-md-3 col-lg-3">
-			<%= image_tag 'team/team2.jpg'%>
+			<%= image_tag 'team/team4.jpg'%>
 			<span class="team-member-name"> ПОНОМАРЕНКО ЄВГЕН </span>
 			<span class="info"> Другий заступник Голови КРМЮ. Студент Інституту підготовки кадрів для органів    
                      прокуратури України НЮУ ім. Ярослава Мудрого. </span>
 		</div>
 		<div class="team-member col-xs-12 col-sm-6 col-md-3 col-lg-3">
-			<%= image_tag 'team/team2.jpg'%>
+			<%= image_tag 'team/team5.jpg'%>
 			<span class="team-member-name"> ГРИЦАЙ ВІКТОРІЯ </span>
 			<span class="info"> Секретар КРМЮ. Студентка Інституту підготовки кадрів для органів юстиції України 
                      НЮУ ім. Ярослава Мудрого. </span>
